Update filter + finetune dataset builder trainer
so they no longer drop structural fields and they work on either schema (new backend or legacy).