@@ -56,23 +56,3 @@ lazy val root = (project in file("."))
     Test / parallelExecution := false
   )
 
-
-
-// // Correctly typed override
-// dependencyOverrides := Seq(
-//   "org.apache.hadoop" % "hadoop-client-api" % "3.3.4",
-//   "org.apache.hadoop" % "hadoop-client-runtime" % "3.3.4"
-// )
-
-// // JVM options for JDK 17 compatibility
-// ThisBuild / fork := true
-// ThisBuild / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.Flat
-// ThisBuild / javaOptions ++= Seq(
-//   "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-//   "-Dspark.driver.userClassPathFirst=true",
-//   "-Dspark.executor.userClassPathFirst=true",
-//   "-Dspark.driver.extraClassPath=target/scala-2.12/classes",
-//   "-Dspark.executor.extraClassPath=target/scala-2.12/classes"
-// )
-
-// Global / excludeLintKeys += classLoaderLayeringStrategy
